sdm660-common: Enable display burn-in-protection in Ambient Display
Change-Id: I3351fa93259b3e4a23b9331ebecc3b0c2c1f9e93

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -1231,4 +1231,7 @@
     <!-- Smart charging -->
     <bool name="config_smartChargingAvailable">true</bool>
 
+    <!-- If true, the display will be shifted around in ambient mode. -->
+    <bool name="config_enableBurnInProtection">true</bool>
+
 </resources>
